--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,4 +1,8 @@
-<h1>Answer</h1>
-<p>You: <%= @question %></p>
-<p>Coach: <%= @answer %></p>
-<%= link_to "Ask a new question", ask_path %>
+<div class="container theme-showcase">
+  <h1>Answer</h1>
+  <p>You: <%= @question %></p>
+  <p>Coach: <%= @answer %></p>
+
+  <%= link_to "Ask a new question", ask_path, class: "btn btn-primary" %>
+
+</div>
