--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,8 +1,10 @@
-<h1>Question</h1>
-<p>Ask your coach a question:</p>
+<div class="container theme-showcase">
+  <h1>Question</h1>
+  <p>Ask your coach a question:</p>
 
-<form action="/ask" method="post">
-  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <input type="text" name="query" value="Your question">
-  <input type="submit">
-</form>
+  <form action="/ask" method="post">
+    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+    <input type="text" name="query" value="Your question">
+    <input type="submit" class="btn btn-primary">
+  </form>
+</div>
